# CampaignForge

./: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PROJECT_STRUCTURE.md  README.md  README_GITHUB_RELEASE.md  RELEASE_CHECKLIST.md  SECURITY.md  pull_request_template.md  pyproject.toml  requirements.txt  run_campaign_forge.bat
ISSUE_TEMPLATE/: bug_report.md  feature_request.md
campaign_forge/: app.py
campaign_forge/core/: plugin_manager.py
campaign_forge/plugins/: __init__.py
campaign_forge/plugins/adventure_seed/: exports.py  generator.py  plugin.py  ui.py
campaign_forge/plugins/artifacts/: exports.py  generator.py  plugin.py  ui.py
campaign_forge/plugins/cavernmap/: __init__.py  exports.py  generator.py  plugin.py  ui.py
campaign_forge/plugins/continentmap/: __init__.py  exports.py  generator.py  plugin.py  preview_window.py  renderer.py  ui.py
campaign_forge/plugins/dungeonmap/: __init__.py  contents.py  edit_dialog.py  generator.py  map_widget.py  plugin.py  preview_window.py  renderer.py  svg_export.py  ui.py
campaign_forge/plugins/encounters/: __init__.py  exports.py  generator.py  plugin.py  ui.py
campaign_forge/plugins/factions/: README.md  __init__.py  exports.py  generator.py  plugin.py  ui.py
campaign_forge/plugins/hexmap/: __init__.py  generator.py  plugin.py  renderer.py  ui.py
campaign_forge/plugins/location_stack/: exports.py  generator.py  plugin.py  ui.py
campaign_forge/ui/: scratchpad.py
core/: app_settings.py  context.py  export_manager.py  plugin_api.py
ui/: main_window.py
workflows/: ci.yml
(+133 files in other folders)
